--- a/public/assets/test.html
+++ b/public/assets/test.html
@@ -7,7 +7,7 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/js/burgers.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="stylesheet" href="/css/styles.css"
 	</head>
 	<body>
 		{{{ body }}}
